<resources>
    <string name="address">addresse</string>
    <string name="add_children">Ajouter un enfant</string>
    <string name="age_max">Age maximum</string>
    <string name="age_min">Age minimum</string>
    <string name="app_name">WHERE IS MY NURSE</string>
    <string name="boy">Garçon</string>
    <string name="birth">Date de naissance</string>
    <string name="city">Ville</string>
    <string name="confirmation">Continuer</string>
    <string name="connexion">Connexion</string>
    <string name="country">Pays</string>
    <string name="finish">Fin</string>
    <string name="first_name">Prénom</string>
    <string name="forget_password">Mot de passe oublié ?</string>
    <string name="girl">Fille</string>
    <string name="last_name">Nom de famille</string>
    <string name="parents">Parents</string>
    <string name="password">Mot de passe</string>
    <string name="password_confirmation">Confirmation du mot de passe</string>
    <string name="phone">Téléphone</string>
    <string name="postal_code">Code postal</string>
    <string name="mail">Mail</string>
    <string name="name">Nom</string>
    <string name="num_children">Nombre d\'enfants acceptés</string>
    <string name="nurse">Nounou</string>
    <string name="register">Inscription</string>
    <string name="step">Etape</string>
    <string name="home">Acceuil</string>
    <string name="search">Recherche</string>
    <string name="pay">Payer</string>
    <string name="settings">Paramètres</string>
    <string name="children">Enfant</string>
    <string name="planning">Planning</string>
    <string name="childrens">Enfants</string>
    <string name="calendar">Calendrier</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="base_informations">Informations de base</string>
    <string name="e_informations">E-Infomations</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="old_password">Ancien mot de passe</string>
    <string name="log_out">Deconnexion</string>
</resources>