<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search"
        android:icon="@drawable/search_foreground"
        android:title="@string/search"
        />

    <item
        android:id="@+id/pay"
        android:icon="@drawable/pay_foreground"
        android:title="@string/pay" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings_foreground"
        android:title="@string/settings" />

    <item
        android:id="@+id/childrens"
        android:icon="@drawable/childrens_foreground"
        android:title="@string/childrens" />

    <item
        android:id="@+id/calendar"
        android:icon="@drawable/calendar_foreground"
        android:title="@string/calendar" />
</menu>