<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MODULE.EInformations">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green_1"
        >

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="10px"
                android:textColor="@color/white"
                />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_style"
                android:hint="@string/phone"
                android:padding="40px"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF"
                android:layout_below="@id/error"
                android:layout_marginLeft="@dimen/button_connexion"
                android:layout_marginRight="@dimen/button_connexion"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_style"
                android:hint="@string/mail"
                android:padding="40px"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF"
                android:layout_below="@id/phone"
                android:layout_marginLeft="@dimen/button_connexion"
                android:layout_marginRight="@dimen/button_connexion"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/input_style"
                android:hint="@string/new_password"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF"
                android:layout_below="@id/mail"
                android:layout_marginBottom="50px"
                android:padding="40px"
                android:layout_marginLeft="@dimen/button_connexion"
                android:layout_marginRight="@dimen/button_connexion"/>

            <EditText
                android:id="@+id/old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/input_style"
                android:hint="@string/old_password"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF"
                android:layout_below="@id/new_password"
                android:layout_marginBottom="50px"
                android:padding="40px"
                android:layout_marginLeft="@dimen/button_connexion"
                android:layout_marginRight="@dimen/button_connexion"/>


            <Button
                android:id="@+id/validation"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/button_corner"
                android:padding="40px"
                android:text="@string/confirmation"
                android:backgroundTint="@null"
                android:layout_below="@id/old_password"
                android:layout_marginLeft="@dimen/button_connexion"
                android:layout_marginRight="@dimen/button_connexion"/>

    </RelativeLayout>

</FrameLayout>