<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".VISUAL_ACTIVITY_2.AddSchool">

    <RelativeLayout
        android:id="@+id/relative_first"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green_1"
        >

        <RelativeLayout
            android:id="@+id/form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="10px"
                android:textColor="@color/white"
                />


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_style"
                android:hint="@string/name"
                android:padding="40px"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF"
                android:layout_below="@id/error"
                android:layout_marginLeft="@dimen/button_connexion"
                android:layout_marginRight="@dimen/button_connexion"
                android:layout_marginBottom="20dp"/>



            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/input_style"
                android:hint="@string/phone"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF"
                android:layout_below="@id/name"
                android:layout_marginBottom="50px"
                android:padding="40px"
                android:layout_marginLeft="@dimen/button_connexion"
                android:layout_marginRight="@dimen/button_connexion"/>

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_style"
                android:hint="@string/address"
                android:padding="40px"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF"
                android:layout_below="@id/phone"
                android:layout_marginLeft="@dimen/button_connexion"
                android:layout_marginRight="@dimen/button_connexion"
                android:layout_marginBottom="20dp"/>

            <LinearLayout
                android:id="@+id/city_cp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/address"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@drawable/input_style"
                    android:hint="@string/city"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="#FFFFFF"
                    android:layout_marginBottom="50px"
                    android:padding="40px"
                    android:layout_weight="0.6"
                    android:layout_marginLeft="@dimen/button_connexion"
                    android:layout_marginRight="@dimen/button_connexion"/>


                <EditText
                    android:id="@+id/postal_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:background="@drawable/input_style"
                    android:hint="@string/postal_code"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="#FFFFFF"
                    android:layout_marginBottom="50px"
                    android:padding="40px"
                    android:layout_weight="0.8"
                    android:layout_marginLeft="@dimen/button_connexion"
                    android:layout_marginRight="@dimen/button_connexion"/>

            </LinearLayout>

            <Button
                android:id="@+id/validation"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/button_corner"
                android:padding="40px"
                android:text="@string/confirmation"
                app:backgroundTint="@null"
                android:layout_below="@id/city_cp"
                android:layout_marginLeft="@dimen/button_connexion"
                android:layout_marginRight="@dimen/button_connexion"/>


        </RelativeLayout>


    </RelativeLayout>

</FrameLayout>