<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MODULE.NurseInformations">

    <RelativeLayout
        android:id="@+id/relative_first"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green_1">

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10px"
            android:textColor="@color/white"
            />



        <EditText
            android:id="@+id/num_children"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:hint="@string/num_children"
            android:padding="40px"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="#FFFFFF"
            android:ems="10"
            android:inputType="numberDecimal"
            android:layout_below="@id/error"
            android:layout_marginLeft="@dimen/button_connexion"
            android:layout_marginRight="@dimen/button_connexion"
            android:layout_marginBottom="20dp"/>



        <EditText
            android:id="@+id/age_min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:hint="@string/age_min"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="#FFFFFF"
            android:ems="10"
            android:inputType="numberDecimal"
            android:layout_below="@id/num_children"
            android:layout_marginBottom="50px"
            android:padding="40px"
            android:layout_marginLeft="@dimen/button_connexion"
            android:layout_marginRight="@dimen/button_connexion"/>

        <EditText
            android:id="@+id/age_max"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:hint="@string/age_max"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="#FFFFFF"
            android:ems="10"
            android:inputType="numberDecimal"
            android:layout_below="@id/age_min"
            android:layout_marginBottom="50px"
            android:padding="40px"
            android:layout_marginLeft="@dimen/button_connexion"
            android:layout_marginRight="@dimen/button_connexion"/>


        <Button
            android:id="@+id/validation"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_corner"
            android:padding="40px"
            android:text="@string/finish"
            android:backgroundTint="@null"
            android:layout_below="@id/age_max"
            android:layout_marginLeft="@dimen/button_connexion"
            android:layout_marginRight="@dimen/button_connexion"/>

    </RelativeLayout>


</FrameLayout>