<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".VISUAL_ACTIVITY_1_CONNECTION.RegisterP3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green_1"
        >

        <ImageButton
            android:id="@+id/back"
            android:layout_width="100px"
            android:layout_height="100px"
            android:src="@drawable/back_foreground"
            android:background="@color/invisible"
            android:layout_margin="40px"/>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="10px"
                android:textColor="@color/white"
                />


            <TextView
                android:id="@+id/step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Etape : 3/4"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"
                android:layout_below="@id/error"/>

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_style"
                android:hint="@string/phone"
                android:padding="40px"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF"
                android:layout_below="@id/step"
                android:layout_marginLeft="@dimen/button_connexion"
                android:layout_marginRight="@dimen/button_connexion"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_style"
                android:hint="@string/mail"
                android:padding="40px"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF"
                android:layout_below="@id/phone"
                android:layout_marginLeft="@dimen/button_connexion"
                android:layout_marginRight="@dimen/button_connexion"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/input_style"
                android:hint="@string/password"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF"
                android:layout_below="@id/mail"
                android:layout_marginBottom="50px"
                android:padding="40px"
                android:layout_marginLeft="@dimen/button_connexion"
                android:layout_marginRight="@dimen/button_connexion"/>

            <EditText
                android:id="@+id/password_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/input_style"
                android:hint="@string/password_confirmation"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF"
                android:layout_below="@id/password"
                android:layout_marginBottom="50px"
                android:padding="40px"
                android:layout_marginLeft="@dimen/button_connexion"
                android:layout_marginRight="@dimen/button_connexion"/>


            <Button
                android:id="@+id/validation"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/button_corner"
                android:padding="40px"
                android:text="@string/confirmation"
                app:backgroundTint="@null"
                android:layout_below="@id/password_confirmation"
                android:layout_marginLeft="@dimen/button_connexion"
                android:layout_marginRight="@dimen/button_connexion"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50px"
            android:gravity="bottom">

            <ImageView
                android:layout_width="500px"
                android:layout_height="10px"
                android:layout_centerHorizontal="true"
                android:layout_margin="10px"
                android:src="@drawable/bar" />

            <Button
                android:id="@+id/connexion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10px"
                android:layout_marginTop="10px"
                android:layout_marginEnd="10px"
                android:layout_marginBottom="10px"
                android:background="@color/invisible"
                android:fontFamily="sans-serif"
                android:text="@string/connexion"
                android:textColor="@color/white"
                app:backgroundTint="@null" />



        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>