<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".VISUAL_ACTIVITY_1_CONNECTION.AddChildren">

    <RelativeLayout
        android:id="@+id/relative_first"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green_1"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="300px"
            android:layout_height="300px"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_margin="50px"
            />

        <RelativeLayout
            android:id="@+id/form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="10px"
                android:textColor="@color/white"
                />

            <TextView
                android:id="@+id/step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Etape : 1/2"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"
                android:layout_below="@id/error"/>

            <RadioGroup
                android:id="@+id/sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/step"
                android:layout_marginLeft="@dimen/button_connexion"
                android:layout_marginRight="@dimen/button_connexion"
                android:layout_marginBottom="20dp"
                >

                <RadioButton android:id="@+id/boy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boy"
                    android:background="@drawable/input_style"
                    android:textColor="@color/white"
                    android:onClick="onRadioButtonClicked"
                    android:checked="true"
                    android:gravity="center"
                    android:layout_weight="1"/>

                <RadioButton android:id="@+id/girl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/girl"
                    android:background="@drawable/input_style"
                    android:textColor="@color/white"
                    android:onClick="onRadioButtonClicked"
                    android:gravity="center"
                    android:layout_weight="1"/>

            </RadioGroup>

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_style"
                android:hint="@string/first_name"
                android:padding="40px"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF"
                android:layout_below="@id/sex"
                android:layout_marginLeft="@dimen/button_connexion"
                android:layout_marginRight="@dimen/button_connexion"
                android:layout_marginBottom="20dp"/>



            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/input_style"
                android:hint="@string/last_name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF"
                android:layout_below="@id/first_name"
                android:layout_marginBottom="50px"
                android:padding="40px"
                android:layout_marginLeft="@dimen/button_connexion"
                android:layout_marginRight="@dimen/button_connexion"/>

            <DatePicker
                android:id="@+id/birth"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:background="@drawable/input_style"
                android:calendarTextColor="@color/white"
                android:layout_below="@id/last_name"
                android:layout_marginBottom="50px"
                android:layout_marginLeft="@dimen/button_connexion"
                android:layout_marginRight="@dimen/button_connexion"/>

            <Button
                android:id="@+id/validation"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_corner"
                android:padding="40px"
                android:text="@string/confirmation"
                app:backgroundTint="@null"
                android:layout_below="@id/birth"
                android:layout_marginLeft="@dimen/button_connexion"
                android:layout_marginRight="@dimen/button_connexion"/>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50px"
            android:gravity="bottom">


            <ImageView
                android:id="@+id/bar"
                android:layout_width="500px"
                android:layout_height="10px"
                android:layout_centerHorizontal="true"
                android:layout_margin="10px"
                android:src="@drawable/bar" />


            <Button
                android:id="@+id/connexion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10px"
                android:layout_marginTop="10px"
                android:layout_marginEnd="10px"
                android:layout_marginBottom="10px"
                android:background="@color/invisible"
                android:fontFamily="sans-serif"
                android:text="@string/connexion"
                android:textColor="@color/white"
                app:backgroundTint="@null" />



        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>